Fix scrollbar for phones in experiences nav

--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -526,6 +526,7 @@ header > nav {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
   &::-webkit-scrollbar {
+    display: none;
     width: 0px;
     height: 0;
     background: transparent; /* Chrome/Safari/Webkit */
